--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,3 +1,12 @@
+/*      COULEURS CHOISIES
+
+        FFB5A7
+        FCD5CE
+        F8EDEB
+        F9DCC4
+        FEC89A
+*/
+
 /*#fieldTest{
 -fx-border: none;
 
