--- a/src/main/resources/static/fxml/offerView.fxml
+++ b/src/main/resources/static/fxml/offerView.fxml
@@ -8,7 +8,7 @@
 
 <VBox fx:id="offer" prefHeight="126.0" prefWidth="558.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.OfferViewController">
         <children>
-            <VBox fx:id="goToOffer" onMouseClicked="#goToOffer" prefHeight="128.0" prefWidth="558.0">
+            <VBox fx:id="goToOffer" onMouseClicked="#goToOffer" prefHeight="202.0" prefWidth="439.0">
                 <children>
                     <Label fx:id="offerTitle" prefHeight="36.0" prefWidth="382.0" text="Titre">
                <font>
@@ -19,7 +19,7 @@
                </VBox.margin></Label>
                     <HBox prefHeight="100.0" prefWidth="200.0">
                         <children>
-                  <ImageView fx:id="imageOffer" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="imageOffer" fitHeight="150.0" fitWidth="164.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin></ImageView>
@@ -30,11 +30,12 @@
                                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="493.80000000000007" minWidth="10.0" prefWidth="289.00000190734863" />
                                 </columnConstraints>
                                 <rowConstraints>
-                                    <RowConstraints maxHeight="27.399998092651366" minHeight="10.0" prefHeight="24.399998092651366" vgrow="SOMETIMES" />
-                                    <RowConstraints maxHeight="42.600001907348634" minHeight="10.0" prefHeight="35.400000000000006" vgrow="SOMETIMES" />
-                                    <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
-                                    <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="27.79999523162842" minHeight="10.0" prefHeight="19.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="42.600001907348634" minHeight="7.0000047683715785" prefHeight="32.2" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="22.6" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="53.2" minHeight="10.0" prefHeight="33.600003814697274" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="46.19999237060547" minHeight="10.0" prefHeight="26.400000000000006" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="24.200007629394534" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                 <children>
                                     <Label prefHeight="18.0" prefWidth="37.0" text="Type :" GridPane.columnIndex="1" />
@@ -47,6 +48,8 @@
                                     <Label text="Price :" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                     <Label fx:id="offerPrice" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                         <Label text="User :" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label text="ZipCode :" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label fx:id="zipCode" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="5" />
                                 </children>
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
