--- a/src/main/resources/static/fxml/orderViews.fxml
+++ b/src/main/resources/static/fxml/orderViews.fxml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller= "com.example.codingweek.controller.OrderController"
-            prefHeight="400.0" prefWidth="600.0">
+
+<AnchorPane prefHeight="285.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.OrderController">
     <children>
-        <Button fx:id="valid" layoutX="176.0" layoutY="128.0" mnemonicParsing="false" onMouseClicked="#confirmOrder" text="Save" />
-        <PasswordField fx:id="currentPW" layoutX="124.0" layoutY="86.0" />
-        <Label layoutX="143.0" layoutY="71.0" text="Enter your password to confirm">
+        <Button fx:id="valid" layoutX="258.0" layoutY="229.0" mnemonicParsing="false" onMouseClicked="#confirmOrder" prefHeight="34.0" prefWidth="84.0" text="Confirm" />
+        <PasswordField fx:id="currentPW" layoutX="225.0" layoutY="163.0" />
+        <Label layoutX="230.0" layoutY="148.0" text="Enter your password to confirm">
             <font>
                 <Font size="10.0" />
             </font>
         </Label>
-        <Label fx:id="errorLabel" layoutX="181.0" layoutY="115.0">
+        <Label fx:id="errorLabel" alignment="CENTER" layoutX="133.0" layoutY="201.0" prefHeight="14.0" prefWidth="334.0">
             <font>
                 <Font size="9.0" />
             </font>
         </Label>
-        <Label fx:id="recap" layoutX="181.0" layoutY="115.0">
+        <Label fx:id="recap" alignment="CENTER" contentDisplay="CENTER" layoutX="77.0" layoutY="52.0" prefHeight="71.0" prefWidth="446.0" textAlignment="CENTER">
             <font>
                 <Font size="15.0" />
             </font>
