--- a/src/main/resources/static/fxml/professor.fxml
+++ b/src/main/resources/static/fxml/professor.fxml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="168.0" prefWidth="394.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ProfessorController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="324.0" prefWidth="507.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ProfessorController">
 
     <children>
-        <Button fx:id="saveButton" layoutX="176.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#submit" text="Save" />
-        <TextField fx:id="markTextField" layoutX="120.0" layoutY="18.0" />
-        <TextArea fx:id="descriptionTextArea" layoutX="120.0" layoutY="18.0" />
-        <PasswordField fx:id="PW" layoutX="119.0" layoutY="110.0" />
-        <Label layoutX="151.0" layoutY="95.0" text="Enter your password">
-            <font>
-                <Font size="10.0" />
-            </font>
-        </Label>
+        <Button fx:id="saveButton" layoutX="426.0" layoutY="149.0" mnemonicParsing="false" onMouseClicked="#submit" text="Save" />
+        <TextField fx:id="markTextField" layoutX="194.0" layoutY="32.0" prefHeight="26.0" prefWidth="52.0" />
+        <TextArea fx:id="descriptionTextArea" layoutX="42.0" layoutY="122.0" prefHeight="98.0" prefWidth="323.0" />
+        <PasswordField fx:id="PW" layoutX="171.0" layoutY="272.0" />
+        <Label layoutX="42.0" layoutY="276.0" text="Enter your password" />
         <Label fx:id="errorLabel" layoutX="181.0" layoutY="115.0">
             <font>
                 <Font size="9.0" />
             </font>
         </Label>
-      <Label layoutX="129.0" layoutY="2.0" text="Please give your rate (0-5)" />
-        <Label layoutX="129.0" layoutY="2.0" text="If you want you can leave a short description (500 characters)" />
+      <Label layoutX="42.0" layoutY="36.0" text="Please give your rate (0-5)" />
+        <Label layoutX="42.0" layoutY="97.0" text="If you want you can leave a short description (500 characters)" />
     </children>
 
 </AnchorPane>
