--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -7,6 +7,12 @@
         FEC89A
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+*{
+    -fx-font-family: "Poppins", sans-serif;
+}
+
 /*#fieldTest{
 -fx-border: none;
 
