--- a/src/main/resources/static/fxml/allOffers.fxml
+++ b/src/main/resources/static/fxml/allOffers.fxml
@@ -1,44 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.example.codingweek.javafxComponent.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.AllOffersController">
+<?import com.example.codingweek.javafxComponent.ComboPanel?>
+
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.AllOffersController">
     <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-   <VBox layoutY="54.0" prefHeight="36.0" prefWidth="1080.0">
+   <VBox alignment="CENTER_LEFT" layoutY="36.0" prefHeight="125.0" prefWidth="1080.0">
       <children>
-         <ToolBar prefHeight="83.0" prefWidth="1080.0">
+         <ToolBar prefHeight="125.0" prefWidth="1080.0" styleClass="toolbar" stylesheets="@../css/allOffers.css">
             <items>
-               <Label text="Offer type :" />
-               <ChoiceBox fx:id="type" prefHeight="25.0" prefWidth="60.0" />
-               <Label text="Category :" />
-               <ComboPanel fx:id="themeComboPanel" prefWidth="300">
+               <Label styleClass="text" stylesheets="@../css/allOffers.css" text="Offer type :" />
+               <ChoiceBox fx:id="type" prefHeight="26.0" prefWidth="78.0" styleClass="choicebox" stylesheets="@../css/allOffers.css" />
+               <Label styleClass="text" stylesheets="@../css/allOffers.css" text="Category :" />
+               <ComboPanel fx:id="themeComboPanel" prefHeight="100" prefWidth="300">
                   <opaqueInsets>
                      <Insets />
                   </opaqueInsets>
                   <padding>
-                     <Insets top="20.0" />
+                     <Insets top="47.0" />
                   </padding></ComboPanel>
-               <Label text="Zip code :">
+               <Label styleClass="text" stylesheets="@../css/allOffers.css" text="Zip code :">
                   <padding>
                      <Insets left="5.0" />
                   </padding></Label>
-               <TextField fx:id="location" prefHeight="26.0" prefWidth="51.0" promptText="54510" />
-               <Label text="Price :">
+               <TextField fx:id="location" prefHeight="26.0" prefWidth="60.0" promptText="54510" styleClass="textfield" stylesheets="@../css/allOffers.css" />
+               <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="50.0" styleClass="text" stylesheets="@../css/allOffers.css" text="Price :">
                   <padding>
                      <Insets left="5.0" />
                   </padding></Label>
-               <Label text="min" />
-               <TextField fx:id="priceMin" prefHeight="26.0" prefWidth="47.0" />
-               <Label text="max" />
-               <TextField fx:id="priceMax" prefHeight="26.0" prefWidth="47.0" />
-               <VBox prefHeight="26.0" prefWidth="88.0">
+               <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="30.0" styleClass="text" stylesheets="@../css/allOffers.css" text="Min" />
+               <TextField fx:id="priceMin" prefHeight="26.0" prefWidth="50.0" styleClass="textfield" stylesheets="@../css/allOffers.css" />
+               <Label alignment="CENTER_RIGHT" prefWidth="30.0" styleClass="text" stylesheets="@../css/allOffers.css" text="Max" />
+               <TextField fx:id="priceMax" prefHeight="26.0" prefWidth="50.0" styleClass="textfield" stylesheets="@../css/allOffers.css" />
+               <VBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="126.0">
                   <children>
-                     <Button mnemonicParsing="false" onMouseClicked="#saveFilters" prefHeight="26.0" prefWidth="91.0" text="Save filters">
+                     <Button mnemonicParsing="false" onMouseClicked="#saveFilters" prefHeight="25.0" prefWidth="91.0" stylesheets="@../css/allOffers.css" text="Save filters">
                         <VBox.margin>
-                           <Insets left="10.0" top="22.0" />
+                           <Insets left="10.0" />
                         </VBox.margin></Button>
                   </children>
                </VBox>
@@ -46,11 +53,11 @@
          </ToolBar>
       </children>
    </VBox>
-   <VBox fx:id="offerToAdd" layoutY="135.0" prefHeight="582.0" prefWidth="1080.0">
+   <VBox fx:id="offerToAdd" layoutY="161.0" prefHeight="556.0" prefWidth="1080.0">
       <children>
          <ScrollPane fx:id="scrollPane" prefHeight="602.0" prefWidth="1080.0">
             <content>
-               <VBox fx:id="offers" prefHeight="543.0" prefWidth="1078.0">
+               <VBox fx:id="offers" prefHeight="514.0" prefWidth="1078.0">
                   <padding>
                      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                   </padding>
