--- a/src/main/resources/static/fxml/convo.fxml
+++ b/src/main/resources/static/fxml/convo.fxml
@@ -25,6 +25,8 @@
             <Button mnemonicParsing="false" text="Send" />
          </children>
       </HBox>
-      <ScrollPane layoutY="42.0" prefHeight="316.0" prefWidth="600.0" />
+      <ScrollPane layoutY="42.0" prefHeight="316.0" prefWidth="600.0">
+
+      </ScrollPane>
    </children>
 </AnchorPane>
